--- a/app/src/main/res/menu/popup.xml
+++ b/app/src/main/res/menu/popup.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/share"
+    <item
+        android:id="@+id/share"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:icon="@drawable/share_icon"
         android:title="@string/share" />
 </menu>
