--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,12 +6,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:popupMenuStyle">@style/PopupMenu</item>
     </style>
 
-    <style name="PopupMenu" parent="@android:style/Widget.PopupMenu">
-        <item name="android:popupBackground">@color/colorButton</item>
-        <item name="android:textSize">12sp</item>
+    <style name="PopupMenu" parent="Widget.AppCompat.PopupMenu">
+        <item name="android:itemBackground">@color/colorPopupBackground</item>
+        <item name="android:textColor">@color/colorButton</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
