Share Application Review Rate Application Status Bar Formatting Some Code Cleaning

--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -15,6 +15,16 @@
         android:gravity="center_horizontal|fill"
         android:orientation="vertical">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorButtonBackground"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:titleTextColor="@color/colorButton"
+            />
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
